# blake3

./: .gitignore  BENCHMARK.md  HACKING.md  README.md  b3sum  bench-b3sum.sh  build  meson.build  meson_options.txt  test  test.backup  test.before_xargsP
.github/workflows/: ci.yml
src/: b3sum.c  b3sum.c.backup  blake3.c  blake3.h  blake3_aarch64_unix.S  blake3_avx2.c  blake3_avx2_x86-64_unix.S  blake3_avx512.c  blake3_avx512_x86-64_unix.S  blake3_dispatch.c  blake3_impl.h  blake3_internal.c  blake3_internal.h  blake3_neon.c  blake3_parallel.c  blake3_parallel.h  blake3_portable.c  blake3_sse2.c  blake3_sse2_x86-64_unix.S  blake3_sse41.c  blake3_sse41_x86-64_unix.S
tests/: test_b3p_comprehensive.c  test_cli.sh  test_fault_injection.c  test_flags_keys.c  test_keyed.c  test_parallel.c  test_parallel_edge_cases.c  test_parallel_extended.c  test_parallel_safe_contracts.c  test_regressions.c  test_streaming.c  test_vectors.c
